--- a/src/views/results.mustache
+++ b/src/views/results.mustache
@@ -71,7 +71,7 @@
                                title="This commit removes this file">remove_circle</i>
                         {{/removed}}
                     </td>
-                    <td>
+                    <td class="file-path-cell">
                         {{filePath}} <br/>
                     </td>
                     <td>
